# vidground

./: .gitignore  LICENSE  README.md  citation.bib  pyproject.toml
data/: README.md
eval/: README.md
scripts/: filter_visually_grounded.py  run_rl_posttrain.sh
src/vidground/: __init__.py  eval.py  filter.py
